--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <h2>Servicios</h2>
       <div class="servicios">
         <div class="serv">
-          <img src="./img/pexels-heyho-7214450.jpg" alt="" />
+          <img src="./img/pexels-heyho-7214450 (1).jpg" alt="" />
           <div class="tarjeta">
             <h4>Muebles de Cocina</h4>
             <p>
@@ -51,7 +51,7 @@
           </div>
         </div>
         <div class="serv">
-          <img src="./img/pexels-heyho-6908502.jpg" alt="" />
+          <img src="./img/pexels-heyho-6908502 (1).jpg" alt="" />
           <div class="tarjeta">
             <h4>Muebles de Sala</h4>
             <p>
@@ -61,7 +61,7 @@
           </div>
         </div>
         <div class="serv">
-          <img src="./img/pexels-heyho-6523275.jpg" alt="" />
+          <img src="./img/pexels-heyho-6523275 (1).jpg" alt="" />
           <div class="tarjeta">
             <h4>Muebles de Habitación</h4>
             <p>
@@ -91,7 +91,7 @@
           >Hablemos</a
         >
       </div>
-      <img src="./img/pexels-tima-miroshnichenko-6790966.jpg" alt="" />
+      <img src="./img/pexels-tima-miroshnichenko-6790966 (1).jpg" alt="" />
     </section>
 
     <section id="precio">
